# thesignal-escrow-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
frontend/: .env.example  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts
frontend/src/components/: BlocklistDemo.tsx  ComplianceDashboard.tsx  CreateDeal.tsx  DealDashboard.tsx  ErrorBoundary.tsx  ReputationBadge.tsx  UnifiedWalletProvider.tsx  WalletConnectModal.tsx
frontend/src/components/ui/: Components.tsx  ShortcutModal.tsx  Skeleton.tsx  Tooltip.tsx
frontend/src/hooks/: useDealEscrow.ts  useFaucet.ts  useKycStatus.ts  usePrivySolanaWallet.ts
frontend/src/idl/: signal_escrow.json  signal_escrow.ts  signal_kyc_hook.json
frontend/src/lib/: solana.ts
programs/signal-escrow/: Cargo.toml
programs/signal-escrow/src/: lib.rs
programs/signal-escrow/src/instructions/: create_deal.rs  deposit.rs  refund.rs  release.rs  resolve.rs
programs/signal-kyc-hook/: Cargo.toml
programs/signal-kyc-hook/src/: errors.rs  lib.rs
programs/signal-kyc-hook/src/instructions/: block_address.rs  init_extra_accounts.rs  initialize.rs  mod.rs  record_travel_rule.rs  register_kyc.rs  transfer_hook.rs
programs/signal-kyc-hook/src/state/: admin_config.rs  mod.rs
scripts/: init-extra-accounts.mjs  mint-vusdc.mjs  setup-devnet.ts
