[package]
name = "signal-escrow"
version = "0.1.0"
description = "The Signal Escrow - Institutional Stablecoin Escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signal_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", default-features = false, features = ["token", "token_2022", "associated_token"] }
